# ferralisp

./: .gitattributes  Cargo.toml  README.md
src/: builtins.rs  lib.rs  list.rs  loaders.rs  machine.rs  main.rs  parser.rs  scope.rs  stdlib.rs  util.rs  value.rs
src/stdlib/: library.tl  lists.tl  long-names.tl  math.tl  matrices.tl  metafunctions.tl  sorting.tl  string.tl  utilities.tl
tests/: evaluation.rs  reference.rs
tests/common/: mod.rs
tests/reference/: conditionals.tl  define.tl  define.tl.out  functions.tl  functions.tl.out  length.tl  length.tl.out  primes.tl  primes.tl.out  primitives.tl  primitives.tl.out  weird_define.tl  weird_define.tl.out
