[package]
name = "ferralisp"
version = "0.1.0"
edition = "2021"

[dependencies]
anstream = "0.6.18"
clap = { version = "4.5.30", features = ["color", "derive"] }
include_dir = "0.7.4"
itertools = "0.14.0"
owo-colors = "4.2.0"
peg = "0.8.4"
rustyline = "15.0.0"
strum_macros = "0.27.0"
thiserror = "2.0.11"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

[dev-dependencies]
test-log = { version = "0.2.17", features = ["trace"] }
